// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGraph > checkpoint img2img 1`] = `
{
  "1": {
    "class_type": "CheckpointLoaderSimple",
    "inputs": {
      "ckpt_name": "dreamshaper_8.safetensors",
    },
  },
  "2": {
    "class_type": "CLIPTextEncode",
    "inputs": {
      "clip": [
        "1",
        1,
      ],
      "text": "a test print",
    },
  },
  "3": {
    "class_type": "CLIPTextEncode",
    "inputs": {
      "clip": [
        "1",
        1,
      ],
      "text": "",
    },
  },
  "4": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/in.png",
    },
  },
  "5": {
    "class_type": "ImageScale",
    "inputs": {
      "crop": "center",
      "height": 1024,
      "image": [
        "4",
        0,
      ],
      "upscale_method": "lanczos",
      "width": 1024,
    },
  },
  "6": {
    "class_type": "VAEEncode",
    "inputs": {
      "pixels": [
        "5",
        0,
      ],
      "vae": [
        "1",
        2,
      ],
    },
  },
  "7": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 0.55,
      "latent_image": [
        "6",
        0,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "3",
        0,
      ],
      "positive": [
        "2",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "8": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "7",
        0,
      ],
      "vae": [
        "1",
        2,
      ],
    },
  },
  "9": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/checkpoint",
      "images": [
        "8",
        0,
      ],
    },
  },
}
`;

exports[`buildGraph > flux txt2img with dual encoders 1`] = `
{
  "1": {
    "class_type": "UnetLoaderGGUF",
    "inputs": {
      "unet_name": "flux1-dev-Q8_0.gguf",
    },
  },
  "2": {
    "class_type": "DualCLIPLoader",
    "inputs": {
      "clip_name1": "t5xxl_fp8.safetensors",
      "clip_name2": "clip_l.safetensors",
      "type": "flux",
    },
  },
  "3": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "flux_ae.safetensors",
    },
  },
  "4": {
    "class_type": "CLIPTextEncode",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "text": "a test print",
    },
  },
  "5": {
    "class_type": "CLIPTextEncode",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "text": "",
    },
  },
  "6": {
    "class_type": "EmptySD3LatentImage",
    "inputs": {
      "batch_size": 1,
      "height": 1024,
      "width": 1024,
    },
  },
  "7": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "6",
        0,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "5",
        0,
      ],
      "positive": [
        "4",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "8": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "7",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "9": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/flux",
      "images": [
        "8",
        0,
      ],
    },
  },
}
`;

exports[`buildGraph > qwen-image img2img with references 1`] = `
{
  "1": {
    "class_type": "UnetLoaderGGUF",
    "inputs": {
      "unet_name": "qwen-image-2.1-Q4_K_M.gguf",
    },
  },
  "2": {
    "class_type": "CLIPLoader",
    "inputs": {
      "clip_name": "qwen3vl_8b_int8_convrot.safetensors",
      "type": "qwen_image",
    },
  },
  "3": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "qwen_image_2.1_vae_bf16.safetensors",
    },
  },
  "4": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/ref1.png",
    },
  },
  "5": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/ref2.png",
    },
  },
  "6": {
    "class_type": "TextEncodeQwenImage21",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "images.image_1": [
        "4",
        0,
      ],
      "images.image_2": [
        "5",
        0,
      ],
      "negative_prompt": "",
      "prompt": "a test print",
      "resolution": 1024,
      "vae": [
        "3",
        0,
      ],
    },
  },
  "7": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "6",
        2,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "6",
        1,
      ],
      "positive": [
        "6",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "8": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "7",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "9": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/qwen",
      "images": [
        "8",
        0,
      ],
    },
  },
}
`;

exports[`buildGraph > qwen-image txt2img 1`] = `
{
  "1": {
    "class_type": "UnetLoaderGGUF",
    "inputs": {
      "unet_name": "qwen-image-2.1-Q4_K_M.gguf",
    },
  },
  "2": {
    "class_type": "CLIPLoader",
    "inputs": {
      "clip_name": "qwen3vl_8b_int8_convrot.safetensors",
      "type": "qwen_image",
    },
  },
  "3": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "qwen_image_2.1_vae_bf16.safetensors",
    },
  },
  "4": {
    "class_type": "TextEncodeQwenImage21",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "negative_prompt": "",
      "prompt": "a test print",
      "resolution": 1024,
    },
  },
  "5": {
    "class_type": "EmptyLatentImage",
    "inputs": {
      "batch_size": 1,
      "height": 1024,
      "width": 1024,
    },
  },
  "6": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "5",
        0,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "4",
        1,
      ],
      "positive": [
        "4",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "7": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "6",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "8": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/qwen",
      "images": [
        "7",
        0,
      ],
    },
  },
}
`;

exports[`buildGraph with ControlNet > matches the Z-Image-Turbo ControlNet blueprint shape (canny) 1`] = `
{
  "1": {
    "class_type": "UNETLoader",
    "inputs": {
      "unet_name": "z_image_turbo_bf16.safetensors",
      "weight_dtype": "default",
    },
  },
  "10": {
    "class_type": "ModelPatchLoader",
    "inputs": {
      "name": "Z-Image-Turbo-Fun-Controlnet-Union.safetensors",
    },
  },
  "11": {
    "class_type": "QwenImageDiffsynthControlnet",
    "inputs": {
      "image": [
        "9",
        0,
      ],
      "model": [
        "2",
        0,
      ],
      "model_patch": [
        "10",
        0,
      ],
      "strength": 1,
      "vae": [
        "4",
        0,
      ],
    },
  },
  "12": {
    "class_type": "GetImageSize",
    "inputs": {
      "image": [
        "9",
        0,
      ],
    },
  },
  "13": {
    "class_type": "EmptySD3LatentImage",
    "inputs": {
      "batch_size": 1,
      "height": [
        "12",
        1,
      ],
      "width": [
        "12",
        0,
      ],
    },
  },
  "14": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "13",
        0,
      ],
      "model": [
        "11",
        0,
      ],
      "negative": [
        "6",
        0,
      ],
      "positive": [
        "5",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "15": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "14",
        0,
      ],
      "vae": [
        "4",
        0,
      ],
    },
  },
  "16": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/control",
      "images": [
        "15",
        0,
      ],
    },
  },
  "2": {
    "class_type": "ModelSamplingAuraFlow",
    "inputs": {
      "model": [
        "1",
        0,
      ],
      "shift": 3,
    },
  },
  "3": {
    "class_type": "CLIPLoader",
    "inputs": {
      "clip_name": "qwen_3_4b.safetensors",
      "type": "lumina2",
    },
  },
  "4": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "ae.safetensors",
    },
  },
  "5": {
    "class_type": "CLIPTextEncode",
    "inputs": {
      "clip": [
        "3",
        0,
      ],
      "text": "a test print",
    },
  },
  "6": {
    "class_type": "ConditioningZeroOut",
    "inputs": {
      "conditioning": [
        "5",
        0,
      ],
    },
  },
  "7": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/ref.png",
    },
  },
  "8": {
    "class_type": "ImageScaleToTotalPixels",
    "inputs": {
      "image": [
        "7",
        0,
      ],
      "megapixels": 1,
      "resolution_steps": 1,
      "upscale_method": "lanczos",
    },
  },
  "9": {
    "class_type": "Canny",
    "inputs": {
      "high_threshold": 0.4,
      "image": [
        "8",
        0,
      ],
      "low_threshold": 0.3,
    },
  },
}
`;

exports[`buildInpaintGraph > matches the Qwen inpainting blueprint shape (latent noise mask, grown + feathered mask) 1`] = `
{
  "1": {
    "class_type": "UnetLoaderGGUF",
    "inputs": {
      "unet_name": "qwen-image-2.1-Q4_K_M.gguf",
    },
  },
  "10": {
    "class_type": "ImageBlur",
    "inputs": {
      "blur_radius": 8,
      "image": [
        "9",
        0,
      ],
      "sigma": 1,
    },
  },
  "11": {
    "class_type": "ImageToMask",
    "inputs": {
      "channel": "red",
      "image": [
        "10",
        0,
      ],
    },
  },
  "12": {
    "class_type": "VAEEncode",
    "inputs": {
      "pixels": [
        "5",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "13": {
    "class_type": "SetLatentNoiseMask",
    "inputs": {
      "mask": [
        "11",
        0,
      ],
      "samples": [
        "12",
        0,
      ],
    },
  },
  "14": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "13",
        0,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "4",
        1,
      ],
      "positive": [
        "4",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "15": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "14",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "16": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/inpaint",
      "images": [
        "15",
        0,
      ],
    },
  },
  "2": {
    "class_type": "CLIPLoader",
    "inputs": {
      "clip_name": "qwen3vl_8b_int8_convrot.safetensors",
      "type": "qwen_image",
    },
  },
  "3": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "qwen_image_2.1_vae_bf16.safetensors",
    },
  },
  "4": {
    "class_type": "TextEncodeQwenImage21",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "negative_prompt": "",
      "prompt": "a red hat",
      "resolution": 1024,
    },
  },
  "5": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/render.png [output]",
    },
  },
  "6": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/mask.png",
    },
  },
  "7": {
    "class_type": "ImageToMask",
    "inputs": {
      "channel": "red",
      "image": [
        "6",
        0,
      ],
    },
  },
  "8": {
    "class_type": "GrowMask",
    "inputs": {
      "expand": 4,
      "mask": [
        "7",
        0,
      ],
      "tapered_corners": true,
    },
  },
  "9": {
    "class_type": "MaskToImage",
    "inputs": {
      "mask": [
        "8",
        0,
      ],
    },
  },
}
`;

exports[`buildOutpaintGraph > matches the Qwen outpainting blueprint shape (pad, scale, composite back) 1`] = `
{
  "1": {
    "class_type": "UnetLoaderGGUF",
    "inputs": {
      "unet_name": "qwen-image-2.1-Q4_K_M.gguf",
    },
  },
  "10": {
    "class_type": "ImageToMask",
    "inputs": {
      "channel": "red",
      "image": [
        "9",
        0,
      ],
    },
  },
  "11": {
    "class_type": "GrowMask",
    "inputs": {
      "expand": 20,
      "mask": [
        "10",
        0,
      ],
      "tapered_corners": true,
    },
  },
  "12": {
    "class_type": "MaskToImage",
    "inputs": {
      "mask": [
        "11",
        0,
      ],
    },
  },
  "13": {
    "class_type": "ImageBlur",
    "inputs": {
      "blur_radius": 31,
      "image": [
        "12",
        0,
      ],
      "sigma": 1,
    },
  },
  "14": {
    "class_type": "ImageToMask",
    "inputs": {
      "channel": "red",
      "image": [
        "13",
        0,
      ],
    },
  },
  "15": {
    "class_type": "VAEEncode",
    "inputs": {
      "pixels": [
        "7",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "16": {
    "class_type": "SetLatentNoiseMask",
    "inputs": {
      "mask": [
        "14",
        0,
      ],
      "samples": [
        "15",
        0,
      ],
    },
  },
  "17": {
    "class_type": "KSampler",
    "inputs": {
      "cfg": 1,
      "denoise": 1,
      "latent_image": [
        "16",
        0,
      ],
      "model": [
        "1",
        0,
      ],
      "negative": [
        "4",
        1,
      ],
      "positive": [
        "4",
        0,
      ],
      "sampler_name": "euler",
      "scheduler": "simple",
      "seed": 7,
      "steps": 25,
    },
  },
  "18": {
    "class_type": "VAEDecode",
    "inputs": {
      "samples": [
        "17",
        0,
      ],
      "vae": [
        "3",
        0,
      ],
    },
  },
  "19": {
    "class_type": "ImageCompositeMasked",
    "inputs": {
      "destination": [
        "7",
        0,
      ],
      "mask": [
        "14",
        0,
      ],
      "resize_source": false,
      "source": [
        "18",
        0,
      ],
      "x": 0,
      "y": 0,
    },
  },
  "2": {
    "class_type": "CLIPLoader",
    "inputs": {
      "clip_name": "qwen3vl_8b_int8_convrot.safetensors",
      "type": "qwen_image",
    },
  },
  "20": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/outpaint",
      "images": [
        "19",
        0,
      ],
    },
  },
  "3": {
    "class_type": "VAELoader",
    "inputs": {
      "vae_name": "qwen_image_2.1_vae_bf16.safetensors",
    },
  },
  "4": {
    "class_type": "TextEncodeQwenImage21",
    "inputs": {
      "clip": [
        "2",
        0,
      ],
      "negative_prompt": "",
      "prompt": "rolling dunes",
      "resolution": 1024,
    },
  },
  "5": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/render.png [output]",
    },
  },
  "6": {
    "class_type": "ImagePadForOutpaint",
    "inputs": {
      "bottom": 0,
      "feathering": 24,
      "image": [
        "5",
        0,
      ],
      "left": 256,
      "right": 256,
      "top": 0,
    },
  },
  "7": {
    "class_type": "ImageScaleToMaxDimension",
    "inputs": {
      "image": [
        "6",
        0,
      ],
      "largest_size": 1536,
      "upscale_method": "area",
    },
  },
  "8": {
    "class_type": "MaskToImage",
    "inputs": {
      "mask": [
        "6",
        1,
      ],
    },
  },
  "9": {
    "class_type": "ImageScaleToMaxDimension",
    "inputs": {
      "image": [
        "8",
        0,
      ],
      "largest_size": 1536,
      "upscale_method": "area",
    },
  },
}
`;

exports[`buildRemoveBackgroundGraph > matches the BiRefNet blueprint: mask inverted before JoinImageWithAlpha 1`] = `
{
  "1": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/render.png [output]",
    },
  },
  "2": {
    "class_type": "LoadBackgroundRemovalModel",
    "inputs": {
      "bg_removal_name": "birefnet.safetensors",
    },
  },
  "3": {
    "class_type": "RemoveBackground",
    "inputs": {
      "bg_removal_model": [
        "2",
        0,
      ],
      "image": [
        "1",
        0,
      ],
    },
  },
  "4": {
    "class_type": "InvertMask",
    "inputs": {
      "mask": [
        "3",
        0,
      ],
    },
  },
  "5": {
    "class_type": "JoinImageWithAlpha",
    "inputs": {
      "alpha": [
        "4",
        0,
      ],
      "image": [
        "1",
        0,
      ],
    },
  },
  "6": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/rmbg",
      "images": [
        "5",
        0,
      ],
    },
  },
}
`;

exports[`buildUpscaleGraph > LoadImage → UpscaleModelLoader → ImageUpscaleWithModel → SaveImage 1`] = `
{
  "1": {
    "class_type": "LoadImage",
    "inputs": {
      "image": "safelight/render.png [output]",
    },
  },
  "2": {
    "class_type": "UpscaleModelLoader",
    "inputs": {
      "model_name": "4x-UltraSharp.pth",
    },
  },
  "3": {
    "class_type": "ImageUpscaleWithModel",
    "inputs": {
      "image": [
        "1",
        0,
      ],
      "upscale_model": [
        "2",
        0,
      ],
    },
  },
  "4": {
    "class_type": "SaveImage",
    "inputs": {
      "filename_prefix": "safelight/upscale",
      "images": [
        "3",
        0,
      ],
    },
  },
}
`;
